# chessEngine

./: .gitignore  BUILD_LOG.md  CLAUDE.md  ENGINE_V2_PLAN.md  LICHESS_BOT.md  LICHESS_BOT_PLAN.md  README.md  bot  chess_engine.py  config.json  config.py  engine.sh  main.py  move_finder.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  uci.py
Chess/: chessEngine.py  chessMain.py
books/: uho_5000.epd
chess/: chess_engine.py  chess_main.py
docs/: BUILD_LOG.md  ENGINE_V2_PLAN.md  LICHESS_BOT.md
engine/: __init__.py  abtest.py  analysis.py  bench.py  calibrate.py  chess_engine.py  eval.py  move_finder.py  movegen.py  pgn.py  search.py  selfplay.py  sf_review.py  sf_watch.py  sprt.py  tm_replay.py  uci.py  uci_client.py
engine/tools/: __init__.py  bench.py  calibrate.py  clock_replay.py  selfplay.py  sf_review.py  sf_watch.py  sprt.py  tune.py
gui/: animation.py  graphics.py  review.py  ui.py
tests/: conftest.py  test_ai_interface.py  test_assets.py  test_clock_replay.py  test_engine_mechanics.py  test_game_state.py  test_mopup.py  test_move_finder.py  test_move_generation.py  test_search.py  test_tune.py  test_uci.py  test_uci_client.py
